# BlueTeam

./: LICENSE.md
Niobe-Standalone/: README.md  digital-audit  pyproject.toml
Niobe-Standalone/ControlPlane_beta/web/: app.js  index.html  styles.css
Niobe-Standalone/Docker/: Dockerfile  Dockerfile.audit  docker-compose.yml
Niobe-Standalone/LLMs/prompts/: claude_audit_brief.md  claude_system.md  compliance_screen.md  deep_code_review.md  risk_register_brief.md  risk_register_prompt.md  validation_pass.md
Niobe-Standalone/Python3/: __init__.py  audit.py  claude.py  cli.py  control_plane.py  deep_review.py  detect.py  hld_baseline.py  installer.py  metrics.py  models.py  parsers.py  provenance.py  reference_docs.py  reporting.py  risk_register.py  runlog.py  scoring.py  settings.py  tree_sitter_analysis.py
Niobe-Standalone/ops/ansible/: bootstrap_control_plane.yml  bootstrap_lb.yml  inventory.example.ini
Niobe-Standalone/ops/ansible/templates/: apache-control-plane.conf.j2  haproxy.cfg.j2  (+1 more)
Niobe-Standalone/scripts/: bootstrap-control-plane  bootstrap-load-balancer  digital-audit  install-docker-rootless  run-control-plane-stack
Niobe-Standalone/templates/: DD_Intrum-HLDv1_0 copia.docx  ai_technical_intelligence_review.html.j2  ai_technical_intelligence_review.md.j2  bootstrap.json  debriefing_report.md.j2  risk_register_template.xlsx  template.docx
Niobe-Standalone/templates/engagement/: intrum.json
Niobe-Standalone/templates/fontconfig/: niobe-font-aliases.conf
Niobe-Standalone/tests/: test_reporting_docx.py  test_settings_modes.py
